--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,13 +4,26 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="19"/>
+
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="MyActivity"
+        <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity android:name="com.graphics.animation.DrawActivity">
+
+        </activity>
+
+        <activity android:name="com.graphics.animation.SwitchImageActivity">
+
+        </activity>
+
+        <activity android:name="com.graphics.animation.CurveLineActivity">
+
         </activity>
     </application>
 </manifest>
